--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="query_hint">Username</string>
+    <string name="repo_hint">Repo</string>
+    <string name="get_pulls">Get Pulls</string>
 </resources>
